After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652034 - Crash in clutter_stage_queue_actor_redraw at clutter-stage.c line 3311
Crash in clutter_stage_queue_actor_redraw at clutter-stage.c line 3311
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: ClutterStage
1.6.x
Other Linux
: Normal critical
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-06-07 10:48 UTC by Sachin
Modified: 2011-08-22 10:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add some safety nets for NULL values (3.80 KB, patch)
2011-06-08 13:30 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Sachin 2011-06-07 10:48:05 UTC
There seem to be Null checks missing within the clutter library causing crashes 
at various locations.

Scenario 1:

Program received signal SIGSEGV, Segmentation fault.
0x0118c830 in g_slice_alloc () from /lib/i386-linux-gnu/libglib-2.0.so.0
(gdb) bt
  • #0 g_slice_alloc
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #1 _clutter_stage_queue_actor_redraw
    at ./clutter-stage.c line 3311
  • #2 clutter_actor_queue_redraw
    at ./clutter-actor.c line 5140
  • #3 clutter_text_set_selection_color
    at ./clutter-text.c line 3776
  • #0 _clutter_actor_set_queue_redraw_clip
    at ./clutter-actor.c line 10825
  • #1 _clutter_actor_finish_queue_redraw
    at ./clutter-actor.c line 4999
  • #2 _clutter_stage_maybe_finish_queue_redraws
    at ./clutter-stage.c line 3389
  • #3 _clutter_stage_do_update
    at ./clutter-stage.c line 884
  • #4 clutter_clock_dispatch
    at ./clutter-master-clock.c line 384
  • #5 g_main_context_dispatch
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #6 ??
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #7 g_main_loop_run
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #8 clutter_main
    at ./clutter-main.c line 927

Comment 1 Emmanuele Bassi (:ebassi) 2011-06-08 13:30:38 UTC
Created attachment 189469 [details] [review]
Add some safety nets for NULL values
Comment 2 Emmanuele Bassi (:ebassi) 2011-07-01 14:02:35 UTC
this the patch solve the issue?
Comment 3 Fabio Durán Verdugo 2011-08-16 02:09:10 UTC
Sachin can you reply the comment 1?
Comment 4 Sachin 2011-08-16 04:34:32 UTC
The provided path solves the problem.
Comment 5 Emmanuele Bassi (:ebassi) 2011-08-22 10:09:19 UTC
Attachment 189469 [details] pushed as 5ba7c13 - Add some safety nets for NULL values