Add some safety nets for NULL values

https://bugzilla.gnome.org/show_bug.cgi?id=652034